Fixed file links.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <h1 style="padding: 10px;">Coding Nonsense</h1>
         <h2>Index</h2>
         <ul>
-        <li><a href="./pages/lesson1.html">Code Crap</a></li> <!--This is the main one-->
-        <li><a href="./pages/lesson2.html">Lists and the Like</li> <!--This one was mainly to test divs-->
+        <li><a href="./pages/Lesson1.html">Code Crap</a></li> <!--This is the main one-->
+        <li><a href="./pages/Lesson2.html">Lists and the Like</li> <!--This one was mainly to test divs-->
         <li><a href="./pages/ProjectTheProjecting.html">Project The Projecting</li> <!--This one was meant to be an almost serious looking page to test my newly obtained code skills!-->
         </ul>
 
