--- a/pages/Lesson1.html
+++ b/pages/Lesson1.html
@@ -8,7 +8,7 @@
 
     <body style="background: linear-gradient(to bottom right, white, rgb(239, 255, 240));">
 
-        <img src="../resources/images/big-pile-of-crap.jpg" width = 444 height = 249.5/>
+        <img src="../resources/images/big-pile-of-crap.jpg" width = 444 height = 249.5 alt="That is one big pile of s#*@ meme"/>
 
         <header>
         <h1><span style="color: #402506">Crayup</span></h1> <!--That's "Crap" for all of you illiterate nerds-->
@@ -20,7 +20,7 @@
         </ol>
 
         <a href="https://www.youtube.com/shorts/4mYO41aPFZ8"target="_blank">
-        <img src="../resources/images/apple.png" width=180 height=180/>
+        <img src="../resources/images/Apple.jpg" width=180 height=180 alt="Apple"/>
         </a>
 
         <p><a href="../index.html">Back to Homepage</a></p>
