Still trying to fix the apple png.

--- a/pages/Lesson1.html
+++ b/pages/Lesson1.html
@@ -19,8 +19,7 @@
         <li>second list item</li>
         </ol>
 
-        <a href="https://www.youtube.com/shorts/4mYO41aPFZ8"target="_blank">
-        <img src="../resources/images/Apple.jpg" width=180 height=180 alt="Apple"/>
+        <a href="https://www.youtube.com/shorts/4mYO41aPFZ8"target="_blank"><img src="../resources/images/Apple.png" width="180" height="180" alt="Apple">
         </a>
 
         <p><a href="../index.html">Back to Homepage</a></p>
