Added an annoying back to homepage button.

--- a/pages/Lesson1.html
+++ b/pages/Lesson1.html
@@ -4,6 +4,7 @@
 
     <head>
     <title>Code Crap</title>
+    <link href="../resources/css/exit.css" rel="stylesheet" type="text/css"/>
     </head>
 
     <body style="background: linear-gradient(to bottom right, white, rgb(239, 255, 240));">
@@ -22,8 +23,6 @@
         <a href="https://www.youtube.com/shorts/4mYO41aPFZ8"target="_blank"><img src="../resources/images/Apple.png" width="180" height="180" alt="Apple">
         </a>
 
-        <p><a href="../index.html">Back to Homepage</a></p>
-
         <p>Important information about us</p>
 
         <footer>
@@ -37,7 +36,9 @@
         Your browser does not support video
         </video>
 
-        </footer>
+        </footer><br><br><br>
+
+        <p class="exit"><a href="../index.html">Back to Homepage</a></p>
 
     </body>
 
