--- a/pages/Lesson2.html
+++ b/pages/Lesson2.html
@@ -3,6 +3,7 @@
 
     <head><title>Lists and the Like</title> <!--A lot more tame than the others-->
     <link href="../resources/css/reset.css" rel="stylesheet" type="text/css"/>
+    <link href="../resources/css/exit.css" rel="stylesheet" type="text/css"/>
     <link href="../resources/css/style.css" rel="stylesheet" type="text/css"/></head> <!--Blue! :D-->
 
     <body>
@@ -61,7 +62,7 @@
         </ul>
         </div>
 
-        <br><p><a href="../index.html">Back to Homepage</a></p><br> <!--Return and gaze upon the final of the linked works!!-->
+        <br><br><br><p class="exit"><a href="../index.html">Back to Homepage</a></p> <!--Return and gaze upon the final of the linked works!!-->
 
     </body>
 
