--- a/pages/ProjectTheProjecting.html
+++ b/pages/ProjectTheProjecting.html
@@ -2,6 +2,7 @@
 
     <head>
     <title>Project: The Projecting</title>
+    <link href="../resources/css/exit.css" rel="stylesheet" type="text/css"/>
     </head>
 
     <body>
@@ -10,8 +11,6 @@
         <img src="../resources/images/Fighting-Hawks.jpg"alt="Two hawks with photoshopped human arms boxing one another"/> <!--HECK YEA GETTEM-->
         <h2>Introduction</h2>
         Birds. There are many different kinds. Pretty ones, weird ones, big ones, small ones, etc.. There are so many of these interesting creatures, so let's take a look at a few of them that you may be hearing about for the first time. <!--*Adjusts monocle and twirls glass of wine* I am the most sophicisificated gentleman around hmm?-->
-
-        <p><a href="../index.html">Back to Homepage</a></p>
 
         <h2>Index</h2>
         <ul>
@@ -66,6 +65,8 @@
         <p>The sunbittern was traditionally placed in the Gruiformes, but this was always considered preliminary. Altogether, the bird is most similar to another bird that was provisionally placed in the Gruiformes, the kagu (Rhynochetos jubatus). Molecular studies seem to confirm that the kagu and sunbittern are each other's closest living relatives and have a similar wing display. They are probably not Gruiformes (though the proposed Metaves are just as weakly supported). Altogether, the two species seem to form a minor Gondwanan lineage which could also include the extinct adzebills and/or the mesites, and is of unclear relation to the Gruiformes proper. Notably, the kagu and mesites also have powder down.</p>
 
         <p><a href="https://en.wikipedia.org/wiki/Sunbittern">Wikipedia Page</a></p></div>
+
+        <br><br><br><p class="exit"><a href="../index.html">Back to Homepage</a></p>
 
 
     </body> <!--?!?! What is this?? Where's all the nonsense?? How absurd!-->
